tests/models/struct/unnamed/bool/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    bool
);
fn main() {}
